--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -1,12 +1,11 @@
-#storybook-root:not([hidden='true']) {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
+#storybook-root {
+  width: 80%;
+  display: flex
+;
+  align-items: center;
+  height: calc(100vh - 2rem);
+  margin: auto;
 
-#storybook-root:not([hidden='true']) > * {
-  flex-shrink: 0;
 }
 
 #storybook-root[hidden],
